# fastlimit

./: .gitignore  .pre-commit-config.yaml  ALGORITHMS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  performance.py
examples/: algorithms_demo.py  fastapi_app.py  multi_tenant.py
fastlimit/: __init__.py  decorators.py  exceptions.py  limiter.py  metrics.py  middleware.py  models.py  utils.py
fastlimit/algorithms/: __init__.py  base.py  sliding_window.py  token_bucket.py
fastlimit/backends/: __init__.py  redis.py
fastlimit/scripts/: fixed_window.lua  sliding_window.lua  token_bucket.lua
tests/: __init__.py  conftest.py  test_concurrency.py  test_decorators.py  test_edge_cases.py  test_fixed_window.py  test_middleware.py  test_multi_tenant.py  test_security.py  test_sliding_window.py  test_token_bucket.py  test_utils.py
